more report UI and map ui

--- a/public/app/report/geo_fence_statistic.html
+++ b/public/app/report/geo_fence_statistic.html
@@ -1,1 +1,82 @@
-geo fence statistic
+<p class="headerrow">GEO Fence Statistic</p>
+<div class="row">
+    <div class="col s12 m12 l10">
+        <div class="col s12 m12 l3">
+            <p>Fleet & Number Plate:</p>
+            <select class="browser-default col s12 m12 l12">
+                <optgroup label="SHSJB">
+                    <option value="volvo">AGX 4139</option>
+                    <option value="saab">ABP 1932</option>
+                </optgroup>
+                <optgroup label="SHSKL">
+                    <option value="mercedes">BAC 2932</option>
+                    <option value="audi">BEY 3416</option>
+                </optgroup>
+                <optgroup label="BH PORT KLANG">
+                    <option value="mercedes">BLV 503</option>
+                </optgroup>
+            </select>
+        </div>
+
+        <div class="col s12 m12 l4">
+            <div class="col s12 m12 l12">
+                <div class="col s12 m12 l2">
+                    From:
+                </div>
+                <div class="col s12 m12 l6">
+                    <input id="from" type="month">
+                </div>
+            </div>
+
+            <div class="col s12 m12 l12" style="margin-top:2%">
+                <div class="col s12 m12 l2">
+                    To:
+                </div>
+                <div class="col s12 m12 l6">
+                    <input id="to" type="month">
+                </div>
+            </div>
+        </div>
+
+        <div class="col s12 m12 l3">
+            <div class="col s12 m12 l12">
+                Area:<select class="browser-default">
+                        <option>Area 1</option>
+                        <option>Area 2</option>
+                     </select>
+            </div>
+            <div class="col s12 m12 l12">
+                <p>Stay time:><input type="text" id="staytime" style="width:50px">Minute</p>
+            </div>
+        </div>
+
+        <div class="col s12 m12 l2">
+            <a class="btn">Statistics</a>
+            <a class="btn buttonspace">Export</a>
+        </div>
+    </div>
+
+    <div class="col s12 m12 1l2">
+        <p class="col s12 m12 l4">Statistical Time: 2016-03-01 00:00:00 ~ 2016-03-01 23:59:59</p>
+        <p class="col s12 m12 l4">Tabulation Time: 2016-03-01 10:13:38</p>
+        <div class="col s12 m12 l12">
+            <table>
+                <thead>
+                    <tr>
+                        <td>Area Name:</td>
+                        <td>Plate NO:</td>
+                        <td>Index:</td>
+                        <td>Enter Time:</td>
+                        <td>Out Time:</td>
+                        <td>Stay Time:</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
