--- a/public/app/setting/yaw_management.html
+++ b/public/app/setting/yaw_management.html
@@ -1,1 +1,47 @@
-yaw management
+<div class="center" style="width:98%;height:auto;padding-left:2%">
+    <p class="headerrow">Geo Fence</p>
+    <div class="row">
+        <div class="col s12 m12 l4 geofencebd">
+            <p class="geofencehead">Routes</p>
+            <div class="col s12 m12 l12 input-field">
+                <input id="areaname" type="text">
+                <label for="areaname" class="active">Route Name</label>
+            </div>
+            <table>
+                <thead>
+                    <tr>
+                        <td class="geofencehead">Route Name</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col s12 m12 l8 geofencebd" style="border-left:0px;">
+            <p class="geofencehead">Vehicle</p>
+            <div class="col s12 m12 l12 input-field">
+                <input id="plateno" type="text">
+                <label for="plateno" class="active">Plate Number</label>
+            </div>
+            <table>
+                <thead>
+                    <tr>
+                        <td><input type="checkbox" id="#"></td>
+                        <td><b>PLATE NO</b></td>
+                        <td><b>SIM CARD</b></td>
+                        <td><b>EFFECTIVE DATE LIMITATION</b></td>
+                        <td><b>EFFECTIVE TIME LIMITATION</b></td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
