--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -7,18 +7,21 @@
     </div>
 
     <div class="col s12 m12 l12" id="carlist">
+        <div class="col s12 m12 l12 center">
+            <p style="color:#2ab4c0; font-size:250%"><i class="fa fa-truck"></i><b style="margin-left:2%">Vehicle List</b></p>
+        </div>
         <table>
             <thead>
                 <tr>
                     <td><b>FLEET</b></td>
                     <td><b>PLATE NO</b></td>
                     <td><b>DRIVER NAME</b></td>
-                    <td><b>GROUP NAme</b></td>
+                    <td><b>GROUP NAME</b></td>
                     <td><b>SPEED</b></td>
-                    <td><b>Fuel</b></td>
-                    <td><b>Today Milleage</b></td>
-                    <td><b>Ignition</b></td>
-                    <td><b>Location</b></td>
+                    <td><b>FUEL</b></td>
+                    <td><b>TODAY MILLEAGE</b></td>
+                    <td><b>IGNITION</b></td>
+                    <td><b>LOCATION</b></td>
                 </tr>
             </thead>
             <tbody>
@@ -49,9 +52,51 @@
     </div>
 
     <div class="col s12 m12 l12" id="carmapping">
-        <!--12321-->
+        <div class="row">
+            <div class="col s12 m12 l4">
+                <select class="browser-default col s12 m12 l12">
+                    <option>SHSJB</option>
+                    <option>SHSKL</option>
+                    <option>BH PORT KLANG</option>
+                </select>
+                <table>
+                    <thead>
+                    <tr>
+                        <td><b>FLEET</b></td>
+                        <td><b>PlATE NO</b></td>
+                        <td><b>DRIVER NAME</b></td>
+                        <td><b>SPEED</b></td>
+                        <td><b>FUEL</b></td>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Abc Fleet</td>
+                        <td>ABC 1234</td>
+                        <td>GENE LIM</td>
+                        <td>80 km/h</td>
+                        <td>800</td>
+                    </tr>
+                    <tr>
+                        <td>Abc Fleep</td>
+                        <td>DE F5678</td>
+                        <td>DENNIS LEE</td>
+                        <td>76km/h</td>
+                        <td>840</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="col s12 m12 l8">
+                <div class="col s12 m12 l12" id="map" style="width: calc(97%); height: 100%; position:absolute"></div>
+            </div>
+        </div>
     </div>
 </div>
+
+
+
 <!--<div class="row">-->
     <!--<div class="card col s12 m12 l6" style="height:500px">-->
         <!--<div class="card-title col s12 m12 l12">-->
@@ -125,7 +170,7 @@
     <!--<div class="col s12 m12 l12">-->
         <!--<div class="col s12 m12 l12">-->
 
-            <!--<div id="map" style="width: calc(97%); height: 100%; position:absolute"></div>-->
+            <!---->
         <!--</div>-->
     <!--</div>-->
 <!--</div>-->
