--- a/public/app/report/trip_event.html
+++ b/public/app/report/trip_event.html
@@ -1,1 +1,90 @@
-trip event
+<p class="headerrow">Trip Statistic</p>
+<div class="row">
+    <div class="col s12 m12 l10">
+        <div class="col s12 m12 l3">
+            <p>Fleet & Number Plate:</p>
+            <select class="browser-default col s12 m12 l12">
+                <optgroup label="SHSJB">
+                    <option value="volvo">AGX 4139</option>
+                    <option value="saab">ABP 1932</option>
+                </optgroup>
+                <optgroup label="SHSKL">
+                    <option value="mercedes">BAC 2932</option>
+                    <option value="audi">BEY 3416</option>
+                </optgroup>
+                <optgroup label="BH PORT KLANG">
+                    <option value="mercedes">BLV 503</option>
+                </optgroup>
+            </select>
+        </div>
+
+        <div class="col s12 m12 l4">
+            <div class="col s12 m12 l12">
+                <div class="col s12 m12 l2">
+                    From:
+                </div>
+                <div class="col s12 m12 l6">
+                    <input id="from" type="month">
+                </div>
+            </div>
+
+            <div class="col s12 m12 l12" style="margin-top:2%">
+                <div class="col s12 m12 l2">
+                    To:
+                </div>
+                <div class="col s12 m12 l6">
+                    <input id="to" type="month">
+                </div>
+            </div>
+        </div>
+
+        <div class="col s12 m12 l3">
+            <div class="col s12 m12 l12">
+                Start Address:
+                <select class="browser-default">
+                    <option>Address 1</option>
+                    <option>Address 2</option>
+                    <option>Address 3</option>
+                </select>
+            </div>
+            <div class="col s12 m12 l12">
+                Destination Address:
+                <select class="browser-default">
+                    <option>Destination 1</option>
+                    <option>Destination 2</option>
+                    <option>Destination 3</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="col s12 m12 l2">
+            <a class="btn">Statistics</a>
+            <a class="btn buttonspace">Export</a>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l5">Start Address: <b>43,Lorong Selamat, 10400 Georgetown, Pulau Pinang</b></p>
+        <p class="col s12 m12 l5">Destination Address: <b>50,Seberange Jaya, 12400 Perai, Pulau Pinang</b></p>
+        <p class="col s12 m12 l4">Statistical Time: </p>
+        <p class="col s12 m12 l3">Tabulation TIme: </p>
+        <table>
+            <thead>
+                <tr>
+                    <td>FLEET/PLATE NO</td>
+                    <td>TRIP INDEX</td>
+                    <td>START TIME</td>
+                    <td>ARRIVAL TIME</td>
+                    <td>DEPARTURE TIME</td>
+                    <td>RETURN TIME</td>
+                    <td>TOTAL TIME-CONSUMING</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <!--SDWODWK-->
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
