--- a/public/app/setting/yaw_setting.html
+++ b/public/app/setting/yaw_setting.html
@@ -1,1 +1,40 @@
-yaw setting
+<div class="row container">
+    <div class="col s12 m12 l12">
+        <div class="center">
+            <p>Yaw SEtting</p>
+        </div>
+        <div>
+            <p class="col s12 m12 l6">Route Name: <select class="browser-default"><option>1</option><option>2</option></select></p>
+            <p class="col s12 m12 l6">Route Width:<input type="text" style="width:60%">M</p>
+        </div>
+        <div class="col s12 m12 l12">
+            <p><input type="checkbox" id="enable" style="margin-right:2%"/>Only effect at setting period:</p>
+            <div class="col s12 m12 l12">
+                <div class="col s12 m6 l1">Date:</div>
+                <div class="col s12 m6 l3"><input type="date" class="right"></div>
+                <div class="col s12 m6 l1">To:</div>
+                <div class="col s12 m6 l3"><input type="date" class="right"></div>
+            </div>
+            <div class="col s12 m12 l12">
+                <p class="col l3"><input type="checkbox" id="sunday"><label for="sunday">Sunday</label></p>
+                <p class="col l3"><input type="checkbox" id="monday"><label for="monday">Monday</label></p>
+                <p class="col l3"><input type="checkbox" id="tuesday"><label for="tuesday">Tuesday</label></p>
+                <p class="col l3"><input type="checkbox" id="wednesday"><label for="wednesday">Wednesday</label></p>
+                <p class="col l3"><input type="checkbox" id="thursday"><label for="thursday">Thursday</label></p>
+                <p class="col l3"><input type="checkbox" id="friday"><label for="friday">Friday</label></p>
+                <p class="col l3"><input type="checkbox" id="saturday"><label for="saturday">Sunday</label></p>
+            </div>
+            <div class="col s12 m12 l12">
+                <div class="l12"><input type="checkbox" id="time"><label for="time">Time</label></div>
+                <div class="col s12 m12 l3">
+                    <div class="l2"><label for="fromtime">From</label></div>
+                    <div class="l3"><input type="time" id="fromtime"></div>
+                </div>
+                <div class="col s12 m12 l3">
+                    <div class="l2"><label for="totime">To</label></div>
+                    <div class="l3"><input type="time" id="totime"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
