--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -1,5 +1,5 @@
 <div class=row">
-    <div class="col s12 m12 l12">
+    <div class="col s12 m12 l12" style="    margin-top: -20px;">
         <ul class="tabs">
             <li class="tab col s3"><a class="active" href="#carlist"><i class="fa fa-truck"></i>Vehicle List</a></li>
             <li class="tab col s3"><a href="#carmapping">Map</a></li>
@@ -53,7 +53,7 @@
 
     <div class="col s12 m12 l12" id="carmapping">
         <div class="row">
-            <div class="col s12 m12 l4">
+            <div class="col s12 m12 l4" >
                 <select class="browser-default col s12 m12 l12">
                     <option>SHSJB</option>
                     <option>SHSKL</option>
@@ -89,7 +89,7 @@
             </div>
 
             <div class="col s12 m12 l8">
-                <div class="col s12 m12 l12" id="map" style="width: calc(97%); height: 100%; position:absolute"></div>
+                <div id="map"></div>
             </div>
         </div>
     </div>
@@ -98,7 +98,7 @@
 
 
 <!--<div class="row">-->
-    <!--<div class="card col s12 m12 l6" style="height:500px">-->
+    <!--<div class="card col s12 m12 l6">-->
         <!--<div class="card-title col s12 m12 l12">-->
             <!---->
         <!--</div>-->
