Fix leanmodal dupliacted initialization

--- a/public/app/admin/users.html
+++ b/public/app/admin/users.html
@@ -5,7 +5,7 @@
                 <div class="title">
                     <h5>User Accounts</h5>
                     <div class="btn-group right">
-                        <a class="btn green lighten-1 z-depth-0 modal-trigger"href="#user_registration_modal"><i class="fa fa-plus"></i></a>
+                        <a class="btn green lighten-1 z-depth-0 modal-trigger" ng-click="vm.add_modal()"><i class="fa fa-plus"></i></a>
                         <a class="btn red lighten-1 z-depth-0"><i class="fa fa-trash"></i></a>
                     </div>
                 </div>
