--- a/public/app/dashboard/user_change_password.html
+++ b/public/app/dashboard/user_change_password.html
@@ -1,1 +1,28 @@
-user password
+<div id="password" class="modal">
+    <div class="modal-content">
+        <div>
+            <div class="center">
+                <p class="flow-text">Change Password</p>
+            </div>
+            <div class="row">
+                <div class="col l12 s12 input-field">
+                    <input id="old-password" type="text">
+                    <label for="old-password" class="active">Your current password</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col l6 s12 input-field">
+                    <input id="new-password" type="text">
+                    <label for="new-password" class="active">Your new password</label>
+                </div>
+                <div class="col l6 s12 input-field">
+                    <input id="new-confirm-password" type="password">
+                    <label for="new-confirm-password" class="active">Confirm new password</label>
+                </div>
+            </div>
+            <div class="row center">
+                <button class="btn" ng-click="vm.profile_update()">Update</button>
+            </div>
+        </div>
+    </div>
+</div>
