--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     <body ng-app="app" ng-controller="NavigationController as vm">
         <ul id="user_setting" class="dropdown-content">
             <li><a href="#profile" class="modal-trigger">Profile</a></li>
-            <li><a href="" >Password</a></li>
+            <li><a href="#password" class="modal-trigger" >Password</a></li>
+            <li><a href="" >View</a></li>
         </ul>
         <div class="navbar-fixed" style="z-index: 999;">
             <nav class="white">
@@ -28,40 +29,9 @@
             </nav>
         </div>
         <div ui-view></div>
-        
-        <!-- Modal Structure -->
-        <div id="profile" class="modal">
-            <div class="modal-content">
-                <div>
-                    <div class="center">
-                        <p class="flow-text">Profile Information</p>
-                    </div>
-                    <div class="row">
-                        <div class="col l6 s12 input-field">
-                            <input id="new-username" type="text" ng-model="user.response.username">
-                            <label for="new-username" class="active">Your username</label>
-                        </div>
-                        <div class="col l6 s12 input-field">
-                            <input id="new-your-email" type="text" ng-model="user.response.email">
-                            <label for="new-your-email" class="active">Your email address</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col l6 s12 input-field">
-                            <input id="new-your-role" type="text" ng-model="user.response.role[0]">
-                            <label for="new-your-role" class="active">Your role</label>
-                        </div>
-                        <div class="col l6 s12 input-field">
-                            <input id="note" type="password" ng-model="vm.user.note">
-                            <label for="note" class="active">Note</label>
-                        </div>
-                    </div>
-                    <div class="row center">
-                        <button class="btn" ng-click="vm.profile_update()">Update</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+
+        <div ng-include src="'app/dashboard/user_profile.html'"></div>
+        <div ng-include src="'app/dashboard/user_change_password.html'"></div>
 
         <script src="libs/angular/angular.min.js"></script>
         <script src="libs/angular-resource/angular-resource.min.js"></script>
