resetpassword button & modal, replace dropdown to textbox, remove password button

--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -1,15 +1,17 @@
 <div class=row">
-    <div class="col s12 m12 l12" style="    margin-top: -20px;">
-        <ul class="tabs">
-            <li class="tab col s3"><a class="active" href="#carlist"><i class="fa fa-truck"></i>Vehicle List</a></li>
-            <li class="tab col s3"><a href="#carmapping">Map</a></li>
-        </ul>
+    <div class="col s12 m12 l12" style="margin-top: -20px;">
+        <div class="col s12 m12 l6">
+            <ul class="tabs">
+                <li class="tab col s6 m6 l6"><a class="active" href="#carlist"><i class="fa fa-truck"></i>Vehicle List</a></li>
+                <li class="tab col s6 m6 l6"><a href="#carmapping">Map</a></li>
+            </ul>
+        </div>
     </div>
 
     <div class="col s12 m12 l12" id="carlist">
-        <div class="col s12 m12 l12 center">
-            <p style="color:#2ab4c0; font-size:250%"><i class="fa fa-truck"></i><b style="margin-left:2%">Vehicle List</b></p>
-        </div>
+        <p class="input-field col s12 m12 l6">
+            <i class="fa fa-search"></i><input type="text" id="fleet" placeholder="FLEET">
+        </p>
         <table>
             <thead>
                 <tr>
@@ -94,83 +96,3 @@
         </div>
     </div>
 </div>
-
-
-
-<!--<div class="row">-->
-    <!--<div class="card col s12 m12 l6">-->
-        <!--<div class="card-title col s12 m12 l12">-->
-            <!---->
-        <!--</div>-->
-        <!--<div class="card-content col s12 m12 l12">-->
-            <!--<table>-->
-                <!--<thead>-->
-                <!--<tr>-->
-                    <!--<td><b>FLEET</b></td>-->
-                    <!--<td><b>MEMBER</b></td>-->
-                    <!--<td><b>PLATE NO</b></td>-->
-                    <!--<td><b>PHONE NO</b></td>-->
-                    <!--<td><b>ADDRESS</b></td>-->
-                <!--</tr>-->
-                <!--</thead>-->
-                <!--<tbody>-->
-                <!--<tr>-->
-                    <!--<td>ABCDE</td>-->
-                    <!--<td>GENE LIM</td>-->
-                    <!--<td>ABC1234</td>-->
-                    <!--<td>0123456789</td>-->
-                    <!--<td>SPICE Arena, Bayan Lepas, Pulau Pinang</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                    <!--<td>DEFGH</td>-->
-                    <!--<td>DENNIS LEE</td>-->
-                    <!--<td>DEF5678</td>-->
-                    <!--<td>0124356789</td>-->
-                    <!--<td>67 Lorong Kinta,10400 Georgetown, Pulau Pinang</td>-->
-                <!--</tr>-->
-                <!--</tbody>-->
-            <!--</table>-->
-        <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="card col s12 m12 l6" style="height:500px">-->
-        <!--<div class="card-title col s12 m12 l12">-->
-            <!--<p style="color:#2ab4c0"><i class="fa fa-globe"></i><b style="margin-left:2%">FEEDS</b></p>-->
-        <!--</div>-->
-        <!--<div class="card-content col s12 m12 l12">-->
-            <!--<table>-->
-                <!--<thead>-->
-                <!--<tr>-->
-                    <!--<td></td>-->
-                    <!--<td>ALARM INFORMATION</td>-->
-                    <!--<td>TIME</td>-->
-                <!--</tr>-->
-                <!--</thead>-->
-                <!--<tbody>-->
-                <!--<tr>-->
-                    <!--<td><i class="fa fa-bell-o"></i></td>-->
-                    <!--<td>ABCDE: GENE LIM(ABC1234) Overspeed by 10km/h at 1.2904230 2.9482834</td>-->
-                    <!--<td>10 Minute ago</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                    <!--<td><i class="fa fa-bell-o"></i></td>-->
-                    <!--<td>DEFGH: GENE LIM(ABC1234) Fuel Alert  at 4.324213 5.123214</td>-->
-                    <!--<td>30 Minute ago</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                    <!--<td><i class="fa fa-bell-o"></i></td>-->
-                    <!--<td>ABCDE: GENE LIM(ABC1234) Overspeed by 10km/h at 1.2904230 2.9482834</td>-->
-                    <!--<td>1 Hour ago</td>-->
-                <!--</tr>-->
-                <!--</tbody>-->
-            <!--</table>-->
-        <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="col s12 m12 l12">-->
-        <!--<div class="col s12 m12 l12">-->
-
-            <!---->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
