--- a/public/app/report/alarm_frequency.html
+++ b/public/app/report/alarm_frequency.html
@@ -2,20 +2,7 @@
 <div class="row">
     <div class="col s12 m12 l10">
         <div class="col s12 m12 l3">
-            <p>Fleet & Number Plate:</p>
-            <select class="browser-default col s12 m12 l12">
-                <optgroup label="SHSJB">
-                    <option value="volvo">AGX 4139</option>
-                    <option value="saab">ABP 1932</option>
-                </optgroup>
-                <optgroup label="SHSKL">
-                    <option value="mercedes">BAC 2932</option>
-                    <option value="audi">BEY 3416</option>
-                </optgroup>
-                <optgroup label="BH PORT KLANG">
-                    <option value="mercedes">BLV 503</option>
-                </optgroup>
-            </select>
+            <p>Fleet & Number Plate: <input type="text" id="platenumber" placeholder="ABC1234"></p>
         </div>
 
         <div class="col s12 m12 l4">
@@ -48,11 +35,7 @@
         </div>
     </div>
 
-<<<<<<< Updated upstream
     <div class="col s12 m12 l12 menuseperator">
-=======
-    <div class="col s12 m12 l12">
->>>>>>> Stashed changes
         <table>
             <thead>
             <tr>
@@ -67,7 +50,7 @@
             </tbody>
         </table>
     </div>
-<<<<<<< Updated upstream
+
     <div class="center" style="padding-top:1%">
         <div class="col s12 m12 l12">
             <ul class="pagination">
@@ -81,6 +64,4 @@
             </ul>
         </div>
     </div>
-=======
->>>>>>> Stashed changes
 </div>
