--- a/public/app/report/alarm_records.html
+++ b/public/app/report/alarm_records.html
@@ -2,20 +2,7 @@
 <div class="row">
     <div class="col s12 m12 l10">
         <div class="col s12 m12 l3">
-            <p>Fleet & Number Plate:</p>
-            <select class="browser-default col s12 m12 l12">
-                <optgroup label="SHSJB">
-                    <option value="volvo">AGX 4139</option>
-                    <option value="saab">ABP 1932</option>
-                </optgroup>
-                <optgroup label="SHSKL">
-                    <option value="mercedes">BAC 2932</option>
-                    <option value="audi">BEY 3416</option>
-                </optgroup>
-                <optgroup label="BH PORT KLANG">
-                    <option value="mercedes">BLV 503</option>
-                </optgroup>
-            </select>
+            <p>Fleet & Number Plate: <input type="text" id="platenumber" placeholder="ABC1234"></p>
         </div>
 
         <div class="col s12 m12 l4">
@@ -56,11 +43,7 @@
         <a class="btn buttonspace">Export</a>
     </div>
 
-<<<<<<< Updated upstream
     <div class="col s12 m12 l12 menuseperator">
-=======
-    <div class="col s12 m12 l12">
->>>>>>> Stashed changes
         <p class="col s12 m12 l6 left">Statistical Time:</p>
         <p class="col s12 m12 l6 right">(Current Time)</p>
         <table>
@@ -78,7 +61,6 @@
         </table>
     </div>
 
-<<<<<<< Updated upstream
     <div class="center" style="padding-top:1%">
         <div class="col s12 m12 l12">
             <ul class="pagination">
@@ -91,22 +73,5 @@
                 <li class="waves-effect"><a href="#!"><i class="fa fa-arrow-right"></i></a></li>
             </ul>
         </div>
-=======
-    <div class="col s12 m12 l12">
-        <table>
-            <td style="text-align: right; vertical-align: middle;" id="tdPage">
-                <a id="Pager1_btnFirst" class="aspNetDisabled btnPage">Home</a>
-                <a id="Pager1_btnPrevious" class="aspNetDisabled btnPage">Previous</a>
-                <a style="margin-right: 10px; margin-left: 5px;">
-                    <span id="Pager1_lblCurrentPage">1</span>/0</a>
-                <a id="Pager1_btnNext" class="aspNetDisabled btnPage">Next</a>
-                <a id="Pager1_btnLast" class="aspNetDisabled btnPage">Last</a><span style="margin-left: 15px; margin-right: 15px;"> Total page:
-                            <span id="Pager1_lblPageCount">0</span>
-                            ，<span id="Pager1_lblItemCount">0</span> items，</span>Redirect to<input name="Pager1$tbPageIndex" type="text" id="Pager1_tbPageIndex" style="width:25px;">
-                <input type="submit" name="Pager1$btnRedirect" value="GO" onclick="return CheckPageIndex();" id="Pager1_btnRedirect">
-                &nbsp;&nbsp;
-            </td>
-        </table>
->>>>>>> Stashed changes
     </div>
 </div>
