--- a/public/app/report/geo_fence_alarm.html
+++ b/public/app/report/geo_fence_alarm.html
@@ -1,1 +1,68 @@
-geo fence alarm
+<p class="headerrow">GEO Fence Alarm</p>
+<div class="row">
+    <div class="col s12 m12 l10">
+        <div class="col s12 m12 l3">
+            <p>Fleet & Number Plate: <input type="text" id="platenumber" placeholder="ABC1234"></p>
+        </div>
+
+        <div class="col s12 m12 l4">
+            <div class="col s12 m12 l12">
+                <div class="col s12 m12 l2">
+                    From:
+                </div>
+                <div class="col s12 m12 l6">
+                    <input id="from" type="month">
+                </div>
+            </div>
+
+            <div class="col s12 m12 l12" style="margin-top:2%">
+                <div class="col s12 m12 l2">
+                    To:
+                </div>
+                <div class="col s12 m12 l6">
+                    <input id="to" type="month">
+                </div>
+            </div>
+        </div>
+
+        <div class="col s12 m12 l3">
+            Alarm
+            <div class="col s12 m12 l12">
+                <select class="browser-default">
+                    <option value="">Speed Alarm</option>
+                    <option value="">Fuel Alarm</option>
+                    <option value="">Ilding Alarm</option>
+                    <option value="">High Voltage Alarm</option>
+                    <option value="">Illigal Alarm</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="col s12 m12 l2">
+            <a class="btn">Statistics</a>
+            <a class="btn buttonspace">Export</a>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l3">Plate No: <b>ABC1234</b></p>
+        <p class="col s12 m12 l3">Period: <b>8 Hour</b></p>
+        <p class="col s12 m12 l4">Tabulation Time: <b>01-03-2016 Current Time</b></p>
+        <table>
+            <thead>
+                <tr>
+                    <td><b>INDEX</b></td>
+                    <td><b>TIME</b></td>
+                    <td><b>ALARM TYPE</b></td>
+                    <td><b>AREA NAME</b></td>
+                    <td><b>ADDRESS</b></td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <!--Start-->
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
