--- a/public/app/report/temperature_report.html
+++ b/public/app/report/temperature_report.html
@@ -1,1 +1,59 @@
-temperature report
+<p class="headerrow">Temperature Report</p>
+<div class="row">
+    <div class="col s12 m12 l10">
+        <div class="col s12 m12 l3">
+            <p>Fleet & Number Plate: <input type="text" id="platenumber" placeholder="ABC1234"></p>
+        </div>
+
+        <div class="col s12 m12 l4">
+            <div class="col s12 m12 l12">
+                <div class="col s12 m12 l2">
+                    From:
+                </div>
+                <div class="col s12 m12 l6">
+                    <input id="from" type="month">
+                </div>
+            </div>
+
+            <div class="col s12 m12 l12" style="margin-top:2%">
+                <div class="col s12 m12 l2">
+                    To:
+                </div>
+                <div class="col s12 m12 l6">
+                    <input id="to" type="month">
+                </div>
+            </div>
+        </div>
+
+        <div class="col s12 m12 l3">
+            <p>Temperature > <input type="number" id="temperaturre" style="width:50px">℃</p>
+        </div>
+
+        <div class="col s12 m12 l2">
+            <a class="btn">Statistics</a>
+            <a class="btn buttonspace">Export</a>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l5">Statistical Time: <b>01-03-2016 00:00:00</b></p>
+        <p class="col s12 m12 l2">Number Plate: <b>ABC1234</b></p>
+        <p class="col s12 m12 l5">Make Time: <b>01-03-2016 23:59:59</b></p>
+        <table>
+            <thead>
+                <tr>
+                    <td><b>Index</b></td>
+                    <td><b>From Time</b></td>
+                    <td><b>To Time</b></td>
+                    <td><b>Range</b></td>
+                    <td><b>Address</b></td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <!--Start-->
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
