--- a/public/app/report/gprs_flow.html
+++ b/public/app/report/gprs_flow.html
@@ -3,20 +3,7 @@
     <div class="col s12 m12 l12">
         <div class="col s12 m12 l9">
             <div class="col s12 m12 l3">
-                <p>Fleet & Number Plate:</p>
-                <select class="browser-default col s12 m12 l12">
-                    <optgroup label="SHSJB">
-                        <option value="volvo">AGX 4139</option>
-                        <option value="saab">ABP 1932</option>
-                    </optgroup>
-                    <optgroup label="SHSKL">
-                        <option value="mercedes">BAC 2932</option>
-                        <option value="audi">BEY 3416</option>
-                    </optgroup>
-                    <optgroup label="BH PORT KLANG">
-                        <option value="mercedes">BLV 503</option>
-                    </optgroup>
-                </select>
+                <p>Fleet & Number Plate: <input type="text" id="platenumber" placeholder="ABC1234"></p>
             </div>
 
             <div class="col s12 m12 l5">
