--- a/public/app/report/operation_log.html
+++ b/public/app/report/operation_log.html
@@ -9,20 +9,7 @@
         </div>
 
         <div class="col s12 m12 l3">
-            <p>Fleet & Number Plate:</p>
-            <select class="browser-default col s12 m12 l12">
-                <optgroup label="SHSJB">
-                    <option value="volvo">AGX 4139</option>
-                    <option value="saab">ABP 1932</option>
-                </optgroup>
-                <optgroup label="SHSKL">
-                    <option value="mercedes">BAC 2932</option>
-                    <option value="audi">BEY 3416</option>
-                </optgroup>
-                <optgroup label="BH PORT KLANG">
-                    <option value="mercedes">BLV 503</option>
-                </optgroup>
-            </select>
+            <p>Fleet & Number Plate: <input type="text" id="platenumber" placeholder="ABC1234"></p>
         </div>
 
         <div class="col s12 m12 l5">
@@ -49,11 +36,7 @@
         <a class="btn">Search</a>
     </div>
 
-<<<<<<< Updated upstream
     <div class="col s12 m12 l12 menuseperator">
-=======
-    <div class="col s12 m12 l12">
->>>>>>> Stashed changes
         <table>
             <thead>
             <tr>
