--- a/public/app/report/rf_data.html
+++ b/public/app/report/rf_data.html
@@ -1,1 +1,60 @@
-rf data
+<p class="headerrow">RF Data</p>
+<div class="row">
+    <div class="col s12 m12 l10">
+        <div class="col s12 m12 l3">
+            <p>Fleet & Number Plate: <input type="text" id="platenumber" placeholder="ABC1234"></p>
+        </div>
+
+        <div class="col s12 m12 l4">
+            <div class="col s12 m12 l12">
+                <div class="col s12 m12 l2">
+                    From:
+                </div>
+                <div class="col s12 m12 l6">
+                    <input id="from" type="month">
+                </div>
+            </div>
+
+            <div class="col s12 m12 l12" style="margin-top:2%">
+                <div class="col s12 m12 l2">
+                    To:
+                </div>
+                <div class="col s12 m12 l6">
+                    <input id="to" type="month">
+                </div>
+            </div>
+        </div>
+
+        <div class="col s12 m12 l3">
+            <p>Name: <input type="text" id="name" style="width:60%"></p>
+        </div>
+
+        <div class="col s12 m12 l2">
+            <a class="btn">Statistics</a>
+            <a class="btn buttonspace">Export</a>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l5">Statistical Time: <b>01-03-2016 00:00:00</b></p>
+        <p class="col s12 m12 l5">Tabulation Time: <b>01-03-2016 Current Time</b></p>
+        <table>
+            <thead>
+                <tr>
+                    <td><b>FLEET</b></td>
+                    <td><b>PLATE NO</b></td>
+                    <td><b>CARD ID</b></td>
+                    <td><b>MEMBER ID</b></td>
+                    <td><b>NAME</b></td>
+                    <td><b>TIME</b></td>
+                    <td><b>ADDRESS</b></td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <!--WDOUJWOJE-->
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
