--- a/public/app/report/running_trip.html
+++ b/public/app/report/running_trip.html
@@ -1,1 +1,52 @@
-running trip
+<p class="headerrow">Running Trip</p>
+<div class="row">
+    <div class="col s12 m12 l10">
+        <div class="col s12 m12 l3">
+            <p>Fleet & Number Plate: <input type="text" id="platenumber" placeholder="ABC1234"></p>
+        </div>
+
+        <div class="col s12 m12 l4">
+            <div class="col s12 m12 l12">
+                <div class="col s12 m12 l2">
+                    From:
+                </div>
+                <div class="col s12 m12 l6">
+                    <input id="from" type="month">
+                </div>
+            </div>
+
+            <div class="col s12 m12 l12" style="margin-top:2%">
+                <div class="col s12 m12 l2">
+                    To:
+                </div>
+                <div class="col s12 m12 l6">
+                    <input id="to" type="month">
+                </div>
+            </div>
+        </div>
+
+        <div class="col s12 m12 l2">
+            <a class="btn">Statistics</a>
+            <a class="btn buttonspace">Export</a>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l3">Start Time: <b>01-03-2016 00:00:00</b></p>
+        <p class="col s12 m12 l3">End Time: <b>01-03-2016 23:59:59</b></p>
+        <table>
+            <thead>
+                <tr>
+                    <td><b>PLATE NO</b></td>
+                    <td><b>START TIME</b></td>
+                    <td><b>START ADDRESS</b></td>
+                    <td><b>REACH TIME</b></td>
+                    <td><b>REACH ADDRESS</b></td>
+                    <td><b>AVERAGE SPEED</b></td>
+                    <td><b>MAXIMUM SPEED</b></td>
+                    <td><b>WARNING</b></td>
+                </tr>
+            </thead>
+        </table>
+    </div>
+</div>
