Fixed map height / width accodring to screen

--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -90,7 +90,7 @@
                 </table>
             </div>
 
-            <div class="col s12 m12 l8">
+            <div class="col s12 m12 l8" style="height: calc(100vh - 176px);">
                 <div id="map"></div>
             </div>
         </div>
