--- a/public/app/home/forgot_password.html
+++ b/public/app/home/forgot_password.html
@@ -1,5 +1,6 @@
-<div id="resetpassword" class="modal">
-    <p>Reset Password</p>
+<div id="resetpassword" class="modal center">
+    <p class="headerrow">Reset Password</p>
+    <p>Please enter your cloudtruck email in the textbox to receive new password</p>
     <div class="row"  id="forget_password" class="modal">
         <p class="col s12 m12 l12"><input type="text" id="email" placeholder="abcd1234@cloudtruck.com" style="width:60%"></p>
         <a class="btn waves-light">Send</a>
