--- a/public/app/dashboard/dashboard.html
+++ b/public/app/dashboard/dashboard.html
@@ -1,14 +1,18 @@
-<div class="navbar-fixed">
-    <nav style=' height: 44px; line-height: 44px;' class="blue-grey darken-3 adjust-sidenav">
-        <div class="nav-wrapper container">
-            <ul class="right hide-on-med-and-down">
-                <li><a ui-sref=".home">Dashboard</a></li>
-                <li><a ui-sref=".vehicle_tracking">Vehicle tracking</a></li>
-                <li><a ui-sref=".settings">Settings</a></li>
-                <li><a ui-sref=".reports">Reports</a></li>
-            </ul>
+<div class="row">
+    <div class="col s12 m12 l16">
+        <div class="navbar-fixed">
+            <nav style=' height: 44px; line-height: 44px;' class="blue-grey darken-3 adjust-sidenav">
+                <div class="nav-wrapper container">
+                    <ul class="right hide-on-med-and-down">
+                        <li><a ui-sref=".home">Dashboard</a></li>
+                        <li><a ui-sref=".vehicle_tracking">Vehicle tracking</a></li>
+                        <li><a ui-sref=".settings">Settings</a></li>
+                        <li><a ui-sref=".reports">Reports</a></li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-    </nav>
+    </div>
 </div>
 
 <div ui-view></div>
