--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
                 <div class="nav-wrapper container">
                     <a href="/dashboard" class="brand-logo blue-text darken-2" ng-class="{'center' : !user }">Logo</a>
                     <ul class="right hide-on-med-and-down" ng-if="user">
+                        <li><a class="dropdown-button blue-text" ><i class="fa fa-globe"></i></a></li> <!--notification button-->
                         <li><a class="dropdown-button blue-text" style="font-weight:300;" data-activates="user_setting" data-beloworigin="true">{{user.response.username}}<i class="fa fa-arrow-down right"></i></a></li>
                         <li ng-if="user.response.role.indexOf(1) > -1"><a href="/admin" class="blue-text">Admin Dashboard<i class="fa fa-arrow-right right"></i></a></li>
                         <li><a href="" class="blue-text tooltipped" data-position="right" data-delay="50" data-tooltip="Lock"><i class="fa fa-lock"></i></a></li>
